# ======================================================================
# This is the CLHEP configuration input file
# Process this file with autoconf to produce a configure script.
# ======================================================================


# ----------------------------------------------------------------------
# Identify the package and initialize the autotools:
# ----------------------------------------------------------------------

AC_PREREQ(2.57)
AC_INIT(CLHEP, 1.9.0.0, CLHEP@cern.ch )
AC_CONFIG_SRCDIR([Vector/src/AxisAngle.cc])
AM_INIT_AUTOMAKE(1.6 foreign)

# ----------------------------------------------------------------------
# subpackages
# ----------------------------------------------------------------------

AC_CONFIG_SUBDIRS(Vector Evaluator GenericFunctions Geometry Matrix Random RandomObjects Units Utilities HepPDT HepMC StdHep)

# ----------------------------------------------------------------------
# Identify the files that 'configure' is to produce:
# ----------------------------------------------------------------------

# Makefiles:
AC_CONFIG_FILES([Makefile])
# tarball scripts
AC_CONFIG_FILES([makeSourceDist], [chmod +x makeSourceDist])
AC_CONFIG_FILES([makeBinaryTar], [chmod +x makeBinaryTar])

# build clheplib
AC_CONFIG_FILES([build-clheplib], [chmod +x build-clheplib])


# ----------------------------------------------------------------------
# Finish up:
# ----------------------------------------------------------------------

AC_OUTPUT


# ======================================================================
