# ======================================================================
# This is the CLHEP configuration input file
# Process this file with autoconf to produce a configure script.
# ======================================================================


# ----------------------------------------------------------------------
# Identify the package and initialize the autotools:
# ----------------------------------------------------------------------

AC_PREREQ(2.59)
AC_INIT(CLHEP, 1.9.1.2, CLHEP@cern.ch )
AC_CANONICAL_TARGET
AC_CONFIG_SRCDIR([Vector/src/AxisAngle.cc])
AM_INIT_AUTOMAKE(1.9 foreign)
AC_PROG_LIBTOOL

# ----------------------------------------------------------------------
# subpackages
# ----------------------------------------------------------------------

AC_CONFIG_SUBDIRS(config Units Vector Evaluator GenericFunctions Geometry Random Matrix RandomObjects HepPDT HepMC StdHep RefCount Cast Exceptions)

# ----------------------------------------------------------------------
# --enable-exceptions or --disable-exceptions
# --disable-exceptions is the default
# ----------------------------------------------------------------------

AC_ARG_ENABLE(exceptions,
   AC_HELP_STRING([--enable-exceptions],[use CLHEP/Exceptions (off by default)]),
        [case "${enableval}" in
          yes) AC_SUBST(use_exceptions,["#define ENABLE_ZOOM_EXCEPTIONS"]) ;;
          no)  AC_SUBST(use_exceptions,["#undef  ENABLE_ZOOM_EXCEPTIONS"]) ;;
          *)   AC_SUBST(use_exceptions,["#define ENABLE_ZOOM_EXCEPTIONS"]) ;;
        esac],
        [AC_SUBST(use_exceptions,["#undef  ENABLE_ZOOM_EXCEPTIONS"])])

# ----------------------------------------------------------------------
# Identify the files that 'configure' is to produce:
# ----------------------------------------------------------------------

# Makefiles:
AC_CONFIG_FILES([Makefile])
# tarball scripts
AC_CONFIG_FILES([makeSourceDist], [chmod +x makeSourceDist])
AC_CONFIG_FILES([makeBinaryTar], [chmod +x makeBinaryTar])

# build clheplib
AC_CONFIG_FILES([build-clheplib], [chmod +x build-clheplib])

# Configuration inquiry program/script:
AC_CONFIG_FILES([clhep-config], [chmod +x clhep-config])

# ----------------------------------------------------------------------
# Capture post-install information:
# ----------------------------------------------------------------------

# ----------------------------------------------------------------------
# Check for needed programs:
# ----------------------------------------------------------------------

# Locate a C++ compiler:
AC_PROG_CXX(cl g++ c++ aCC CC cxx cc++ FCC KCC RCC xlC_r xlC gpp)

# Use it hereinafter:
AC_LANG(C++)

# Ensure we've found a preprocessor:
AC_REQUIRE_CPP
# copy and diff
case "$target" in
*-*-win32*)
  COPY_P="copy -p";DIFF_Q="diff -q -b"
  ;;
*-*-cygwin*)
  COPY_P="cp -p";DIFF_Q="diff -q -b"
  ;;
*-*-solaris*)
  COPY_P="cp -p";DIFF_Q="diff -b"
  ;;
*-*-linux*)
  COPY_P="cp -p";DIFF_Q="diff -q -b"
  ;;
*)
  COPY_P="cp -p";DIFF_Q="diff -q -b"
esac

AC_SUBST(COPY_P)
AC_SUBST(DIFF_Q)

# worry about compiler flags
case "$CXX" in
g++) 
   case "$target" in
   *-*-linux*) AM_CXXFLAGS="-O -ansi -pedantic -Wall -D_GNU_SOURCE";;
   *) AM_CXXFLAGS="-O -ansi -pedantic -Wall"
   esac;;
c++) 
   case "$target" in
   *-*-linux*) AM_CXXFLAGS="-O -ansi -pedantic -Wall -D_GNU_SOURCE";;
   *) AM_CXXFLAGS="-O -ansi -pedantic -Wall"
   esac;;
cl)  
   AM_CXXFLAGS="-EHsc"
   ;;
CC)  
   case "$target" in
   *-*-solaris*) AM_CXXFLAGS="-O";;
   *-*-hpux*) AM_CXXFLAGS="+O3 +DAportable +a1 -z -pta +Onolimit";;
   *-*-irix*) AM_CXXFLAGS="-O -OPT:Olimit=0 -pta";;
   *)   echo UNEXPECTED CHOICE OF OPERATING SYSTEM FOR $CXX: $target
   esac;;
aCC) 
   AM_CXXFLAGS="-O -Aa +DAportable +Onolimit"
   ;;
cxx) 
   AM_CXXFLAGS="-O -std strict_ansi -timplicit_local"
   ;;
xlC) 
   AM_CXXFLAGS="-O3 -qtwolink -+"
   ;;
*)   echo UNEXPECTED CHOICE OF C++ COMPILER: $CXX
esac

AC_SUBST(AM_CXXFLAGS)


# ----------------------------------------------------------------------
# Finish up:
# ----------------------------------------------------------------------

AC_OUTPUT


# ======================================================================
